; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_somfy.c_somfy_transmissionDone.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_somfy.c_somfy_transmissionDone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@lua_done_ref = common dso_local global i32 0, align 4
@LUA_NOREF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @somfy_transmissionDone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @somfy_transmissionDone(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32* (...) @lua_getstate()
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %7 = load i32, i32* @lua_done_ref, align 4
  %8 = call i32 @lua_rawgeti(i32* %5, i32 %6, i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %11 = load i32, i32* @lua_done_ref, align 4
  %12 = call i32 @luaL_unref(i32* %9, i32 %10, i32 %11)
  %13 = load i32, i32* @LUA_NOREF, align 4
  store i32 %13, i32* @lua_done_ref, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_call(i32* %14, i32 0, i32 0)
  ret void
}

declare dso_local i32* @lua_getstate(...) #1

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @luaL_unref(i32*, i32, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
